@@ -16,7 +16,7 @@
 @c ================================================================
 
 @c ================================================================
-@c $Id: dmalloc.texi,v 1.137 1998/09/29 13:33:10 gray Exp $
+@c $Id: dmalloc.texi,v 1.138 1998/09/29 13:43:22 gray Exp $
 @c ================================================================
 
 @ifinfo
@@ -50,7 +50,7 @@ translation approved by the author instead of in the original English.
 
 @titlepage
 @title Debug Malloc Library
-@subtitle Version 4.0.0-beta
+@subtitle Version 4.0.0-beta2
 @subtitle September 1998
 @author Gray Watson
 
@@ -79,7 +79,7 @@ translation approved by the author instead of in the original English.
 @top Debug Malloc Library
 
 @ifinfo
-Version 4.0.0-beta -- September 1998
+Version 4.0.0-beta2 -- September 1998
 @end ifinfo
 
 @cindex introduction
